@@ -1652,3 +1652,10 @@
 2013-09-27  ChunEon Park (Hermet)
 
         * layout: fixed the layout to swallow the contents again when theme is changed.
+
+2013-09-29  ChunEon Park (Hermet)
+
+        * mapbuf: Dont' move the content to not be calculated. Mapbuf expects
+        the content is static object and it won't be updated by content
+        position. This actually reduces the mapbuf calculation time muchly in
+        case of complex layout.
